--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ twitchio==3.0.1
 requests==2.32.4
 aiohttp==3.12.14
 python-socketio==5.13.0
+apscheduler==3.11.0
+numpy==2.3.2
+adafruit_blinka_raspberry_pi5_piomatter==1.0.0
